--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   carousel_slider: ^5.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
